results/SpecGenBench/4-shot/log-StrPalindrome-2023_11_05_21_36_25.txt
public class StrPalindrome {
   
   //@ ensures \result == true <==> reverse(str).equals(str);
   public boolean isPalindrome(String str) {
      String reverse = "";
      
      int length = str.length();

      //@ maintaining reverse.equals(reverse(str.substring(i+1, length)));
      //@ decreases i;
      for (int i = length - 1; 0 <= i; i--) {
         reverse = reverse + str.charAt(i);
      }
      
      return reverse.equals(str);
   }

   /*@ 	requires str != null;
        ensures \result.equals(new StringBuilder(str).reverse().toString());
   	public model function static pure String reverse(String str) {
		return new StringBuilder(str).reverse().toString();
	} @*/
}
/home/max/Documents/JMLGPT/tmp/StrPalindrome.java:20: error: <identifier> expected
   	public model function static pure String reverse(String str) {
   	                     ^
/home/max/Documents/JMLGPT/tmp/StrPalindrome.java:20: error: Method specs may not precede a variable declaration
   	public model function static pure String reverse(String str) {
   	                      ^
2 errors

